# Camera_DepthAI

./: .gitignore  Camera_acces.ipynb  OAK-1_MAX_continous_capture.py  OAK-1_MAX_image_capture.py  OAK-1_MAX_on_demand_capture.py  OAK-1_MAX_time_performance_benchmark  README.md  camera_access_OAK-1_MAX.ipynb  camera_access_OSK-1_MAX.py  pyproject.toml
