[tool.poetry]
name = "camera-depthai"
version = "0.1.0"
description = ""
authors = ["Taenar97 <sven1997@gmx.net>"]
readme = "README.md"
packages = [{include = "camera_depthai"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.0.74"
ipykernel = "^6.25.0"
depthai = "^2.22.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
